Now it compiles
Still with lots of errors of course

--- a/my.bib
+++ b/my.bib
@@ -1197,7 +1197,7 @@
 
 @INCOLLECTION{zgroup,
 	AUTHOR = {Conrad, Brian},
-	TITLE = {Non-split reductive groups over $\Z$},
+	TITLE = {Non-split reductive groups over Z},
 	BOOKTITLE = {Autour des Sch\'emas en Groupes, Vol. II}, 
 	SERIES = {Panoramas et Synth\`eses}
 	VOLUME = {Numero 46},
