--- a/preamble.tex
+++ b/preamble.tex
@@ -10,6 +10,8 @@
 %\usepackage{amssymb}
 %\usepackage{amsthm}
 
+\usepackage{graphicx}
+
 % For dealing with references we use the comment environment
 \usepackage{verbatim}
 \newenvironment{reference}{\comment}{\endcomment}
@@ -206,6 +208,9 @@
 %
 \def\SL{\mathop{\mathrm{SL}}\nolimits}
 \def\GL{\mathop{\mathrm{GL}}\nolimits}
+\def\ltimes{{\mathchar"256E}}
+\def\rtimes{{\mathchar"256F}}
+\def\Rrightarrow{{\mathchar"3456}}
 
 %
 % Macros for moduli stacks/spaces
