Worked through first section in ssgroups

--- a/my.bib
+++ b/my.bib
@@ -819,7 +819,7 @@
 @ARTICLE{boreltits,
 	AUTHOR = {Borel, Armand and Tits, Jacques},
 	TITLE = {Groupes r\'eductifs},
-	JOURNAL = {Publ. Math. IHES}
+	JOURNAL = {Publ. Math. IHES},
 	VOLUME = {27},
 	YEAR = {1965},
 	PAGES = {55--151},
@@ -862,15 +862,15 @@
      PAGES = {xv+357},
 }
 
-@BOOK{bourbaki1,
-	AUTHOR = {Bourbaki, Nicolas}
+@BOOK{bourbaki123,
+	AUTHOR = {Bourbaki, Nicolas},
 	TITLE = {Lie groups and Lie algebras, Ch.:I--III},
 	PUBLISHER = {Springer--Verlag},
 	ADDRESS = {New York},
 	YEAR = {2007},
 }
 
-@BOOK{bourbaki,
+@BOOK{bourbaki456,
 	AUTHOR = {Bourbaki, Nicolas},
 	TITLE = {Lie groups and Lie algebras, Ch.:IV--VI},
 	PUBLISHER = {Springer-Verlag},
@@ -1189,7 +1189,7 @@
 	AUTHOR = {Conrad, Brian},
 	TITLE = {Reductive Group Schemes},
 	BOOKTITLE = {Autour des Sch\'emas en Groupes, Vol. I}, 
-	SERIES = {Panoramas et Synth\`eses}
+	SERIES = {Panoramas et Synth\`eses},
 	VOLUME = {Numero 42--43},
 	PUBLISHER = {Soci\'et\'e Math. de France},
 	YEAR = {2014},
@@ -1199,7 +1199,7 @@
 	AUTHOR = {Conrad, Brian},
 	TITLE = {Non-split reductive groups over Z},
 	BOOKTITLE = {Autour des Sch\'emas en Groupes, Vol. II}, 
-	SERIES = {Panoramas et Synth\`eses}
+	SERIES = {Panoramas et Synth\`eses},
 	VOLUME = {Numero 46},
 	PUBLISHER = {Soci\'et\'e Math. de France},
 	YEAR = {2015},
@@ -1209,7 +1209,7 @@
 @INCOLLECTION{strsolv,
 	AUTHOR = {Conrad, Brian},
 	TITLE = {Structure of solvable groups},
-	SERIES = {Panoramas et Synth\`eses}
+	SERIES = {Panoramas et Synth\`eses},
 	VOLUME = {Numero 46},
 	PUBLISHER = {Soci\'et\'e Math. de France},
 	YEAR = {2015},
